added skills and projects sections

--- a/index.html
+++ b/index.html
@@ -96,6 +96,135 @@
 
     </section>
 
+    <section id="skills">
+        <h1 class="skills-title">Skills</h1>
+        <div class="skills-container">
+            <div class="skills__list">
+                <h3 class="skills__list--title">Html</h3>
+                <div class="bar bar1"></div>
+                <h3 class="skills__list--title">CSS</h3>
+                <div class="bar bar1"></div>
+                <h3 class="skills__list--title">JavaScript</h3>
+                <div class="bar bar1"></div>
+                <h3 class="skills__list--title">Jquery</h3>
+                <div class="bar bar1"></div>
+            </div>
+            <div class="skills__list">
+                <h3 class="skills__list--title">React</h3>
+                <div class="bar bar1"></div>
+                <h3 class="skills__list--title">Node/Express</h3>
+                <div class="bar bar1"></div>
+                <h3 class="skills__list--title">PHP</h3>
+                <div class="bar bar1"></div>
+                <h3 class="skills__list--title">MySql</h3>
+                <div class="bar bar1"></div>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="projects">
+        <h1 class="projects-title">Projects</h1>
+        <div class="projects-container">
+            <div class="project project__1">
+                <div class="project__img">
+                    <img class="project__img--item" src="#" alt="#">
+                </div>
+                <div class="project__info">
+                    <h3 class="project__info--title">Project1</h3>
+                    <p class="project__info--description">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo obcaecati amet et natus,
+                        similique alias maiores laudantium nemo officia.
+                    </p>
+                    <div class="project__btns">
+                        <a class="btn btn__project" href="#">Demo</a>
+                        <a class="btn btn__project" href="#">View Code</a>
+
+                    </div>
+                </div>
+            </div>
+            <div class="project project__2">
+                <div class="project__img">
+                    <img class="project__img--item" src="#" alt="#">
+                </div>
+                <div class="project__info">
+                    <h3 class="project__info--title">Project2</h3>
+                    <p class="project__info--description">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo obcaecati amet et natus,
+                        similique alias maiores laudantium nemo officia.
+                    </p>
+                    <div class="project__btns">
+                        <a class="btn btn__project" href="#">Demo</a>
+                        <a class="btn btn__project" href="#">View Code</a>
+
+                    </div>
+                </div>
+            </div>
+            <div class="project project__3">
+                <div class="project__img">
+                    <img class="project__img--item" src="#" alt="#">
+                </div>
+                <div class="project__info">
+                    <h3 class="project__info--title">Project3</h3>
+                    <p class="project__info--description">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo obcaecati amet et natus,
+                        similique alias maiores laudantium nemo officia.
+                    </p>
+                    <div class="project__btns">
+                        <a class="btn btn__project" href="#">Demo</a>
+                        <a class="btn btn__project" href="#">View Code</a>
+
+                    </div>
+                </div>
+            </div>
+            <div class="project project__4">
+                <div class="project__img">
+                    <img class="project__img--item" src="#" alt="#">
+                </div>
+                <div class="project__info">
+                    <h3 class="project__info--title">Project4</h3>
+                    <p class="project__info--description">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo obcaecati amet et natus,
+                        similique alias maiores laudantium nemo officia.
+                    </p>
+                    <div class="project__btns">
+                        <a class="btn btn__project" href="#">Demo</a>
+                        <a class="btn btn__project" href="#">View Code</a>
+
+                    </div>
+                </div>
+            </div>
+            <div class="project project__5">
+                <div class="project__img">
+                    <img class="project__img--item" src="#" alt="#">
+                </div>
+                <div class="project__info">
+                    <h3 class="project__info--title">Project5</h3>
+                    <p class="project__info--description">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo obcaecati amet et natus,
+                        similique alias maiores laudantium nemo officia.
+                    </p>
+                    <div class="project__btns">
+                        <a class="btn btn__project" href="#">Demo</a>
+                        <a class="btn btn__project" href="#">View Code</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h1 class="contact-title">Contact</h1>
+        <div class="contact-container">
+
+        </div>
+    </section>
+
+
+
+
+
     <script src="./js/main.js"></script>
 </body>
 
