--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
                 <img class="about__img--item" src="#" alt="#">
             </div>
             <div class="about__info">
-                <p class="about__info--p about__info--p1">
+                <p class="about__info--text about__info--text1">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis, earum
                     numquam obcaecati itaque
                     iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
                     Possimus,
                     eum.
                 </p>
-                <p class="about__info--p about__info--p2">
+                <p class="about__info--text about__info--text2">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis, earum
                     numquam obcaecati itaque
                     iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
                     Possimus,
                     eum.
                 </p>
-                <p class="about__info--p about__info--p3">
+                <p class="about__info--text about__info--text3">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis, earum
                     numquam obcaecati itaque
                     iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
@@ -101,23 +101,23 @@
         <div class="skills-container">
             <div class="skills__list">
                 <h3 class="skills__list--title">Html</h3>
-                <div class="bar bar1"></div>
+                <div class="bar bar1">85</div>
                 <h3 class="skills__list--title">CSS</h3>
-                <div class="bar bar1"></div>
+                <div class="bar bar1">95</div>
                 <h3 class="skills__list--title">JavaScript</h3>
-                <div class="bar bar1"></div>
+                <div class="bar bar1">90</div>
                 <h3 class="skills__list--title">Jquery</h3>
-                <div class="bar bar1"></div>
+                <div class="bar bar1">80</div>
             </div>
             <div class="skills__list">
                 <h3 class="skills__list--title">React</h3>
-                <div class="bar bar1"></div>
+                <div class="bar bar1">90</div>
                 <h3 class="skills__list--title">Node/Express</h3>
-                <div class="bar bar1"></div>
+                <div class="bar bar1">80</div>
                 <h3 class="skills__list--title">PHP</h3>
-                <div class="bar bar1"></div>
+                <div class="bar bar1">70</div>
                 <h3 class="skills__list--title">MySql</h3>
-                <div class="bar bar1"></div>
+                <div class="bar bar1">75</div>
             </div>
         </div>
 
@@ -217,7 +217,16 @@
     <section id="contact">
         <h1 class="contact-title">Contact</h1>
         <div class="contact-container">
-
+            <div class="contact__input">
+                <input class="contact__input--name" type="text" placeholder="Name">
+                <input class="contact__input--email" type="text" placeholder="Email">
+                <input class="contact__input--subject" type="text" placeholder="Subject">
+                <input class="contact__input--message" type="text" placeholder="Message">
+                <a class="btn btn__contact" href="#">Send Message</a>
+            </div>
+            <!-- <div class="contact__info">
+               
+            </div> -->
         </div>
     </section>
 
