--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/about.css">
     <link rel="stylesheet" href="./css/skills.css">
@@ -28,7 +29,7 @@
                 <div class="navbar__toggle">
                     <i class="fas fa-bars"></i>
                 </div>
-                <ul class="navbar__list">
+                <ul class="navbar__list navbar__list--hide">
                     <li><a href="#" class="navbar__list--item">About</a></li>
                     <li><a href="#" class="navbar__list--item">Skills</a></li>
                     <li><a href="#" class="navbar__list--item">Projects</a></li>
