--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Poppins:400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/about.css">
     <link rel="stylesheet" href="./css/skills.css">
     <link rel="stylesheet" href="./css/projects.css">
-    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="./css/contact.css"> -->
     <title>Katleens | Portfolio</title>
 </head>
 
@@ -24,7 +25,7 @@
         <div class="navbar-container">
             <nav class="navbar">
                 <div class="navbar__logo">
-                    Katleen
+                    Kats Space
                 </div>
                 <div class="navbar__toggle">
                     <i class="fas fa-bars"></i>
