finished home section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="navbar-container">
             <nav class="navbar">
                 <div class="navbar__logo">
-                    Kats Space
+                    <a href="#home"><img class="navbar__logo--img" src="./images/katsspace-logo-white.png" alt="katsspace"></a> 
                 </div>
                 <div class="navbar__toggle">
                     <i class="fas fa-bars"></i>
