--- a/index.html
+++ b/index.html
@@ -62,35 +62,39 @@
 
     <section id="about">
         <h1 class="about-title">About</h1>
-        <div class="about-container">
-            <div class="about__img">
-                <img class="about__img--item" src="#" alt="#">
+        <div class="about-content">
+            <div class="about-content__div">
+                <img class="about-content__div--img" src="./images/IMG_4047.jpg" alt="Picture of Katleen">
             </div>
-            <div class="about__info">
-                <p class="about__info--text about__info--text1">
+            <div class="about-content__info">
+                <p class="about-content__info--text about-content__info--text1">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis, earum
+                    numquam obcaecati itaque
+                    iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
+                    Possimus,
+                    eum.arum
+                    numquam obcaecati itaque
+                    iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
+                </p>
+                <p class="about-content__info--text about-content__info--text2">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis, earum
+                    numquam obcaecati itaque
+                    iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
+                    Possimus,
+                    eum.arum
+                    numquam obcaecati itaque
+                    iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
+                </p>
+                <p class="about-content__info--text about-content__info--text3">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis, earum
                     numquam obcaecati itaque
                     iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
                     Possimus,
                     eum.
                 </p>
-                <p class="about__info--text about__info--text2">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis, earum
-                    numquam obcaecati itaque
-                    iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
-                    Possimus,
-                    eum.
-                </p>
-                <p class="about__info--text about__info--text3">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis, earum
-                    numquam obcaecati itaque
-                    iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
-                    Possimus,
-                    eum.
-                </p>
-                <div class="about__info--btns">
-                    <a href="#" class="btn btn__about--dl">Download Resume</a>
-                    <a href="#" class="btn btn__about--ct">Hire Me</a>
+                <div class="about-content__info--btns">
+                    <a href="#" class="btn btn__about">Download Resume</a>
+                    <a href="#" class="btn btn__about">Hire Me</a>
                 </div>
 
             </div>
