--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="navbar-container">
             <nav class="navbar">
                 <div class="navbar__logo">
-                    <a href="#home"><img class="navbar__logo--img" src="./images/katsspace-logo-white.png"
+                    <a href="#"><img class="navbar__logo--img" src="./images/katsspace-logo-white.png"
                             alt="katsspace"></a>
                 </div>
                 <div class="navbar__toggle">
@@ -45,8 +45,7 @@
                 <h5 class="home__my-info--greeting">Hello World</h5>
                 <h1 class="home__my-info--name">I'm Katleen Ludger.</h1>
                 <p class="home__my-info--job">
-                    <span> Full Stack Web Developer</span>
-                    <span class="home__my-info--job-separator">|</span>
+                    <span class="home__my-info--job1"> Full Stack Web Developer</span>
                     <span>Front-End & Back-End</span>
                 </p>
                 <a href="#about" class="btn btn__home">More About Me <i class="fas fa-chevron-down"></i></a>
@@ -107,56 +106,38 @@
         <h1 class="skills-title">Skills</h1>
         <div class="skills-container">
 
-            <ul class="skills__list skills__list-main">
+            <ul class="skills__list ">
                 <h3 class="skills__list--header">Front-End</h3>
-                <li class="skills__list-main--item">HTML5</li>
-                <li class="skills__list-main--item">CSS
-
-                    <ul class="skills__list-sub">
-                        <li class="skills__list-sub--item">flex-box</li>
-                        <li class="skills__list-sub--item">grid</li>
-                    </ul>
-
-                </li>
-                <li class="skills__list-main--item">JavaScript
-                    <ul class="skills__list-sub">
-                        <li class="skills__list-sub--item">Jquery</li>
-                        <li class="skills__list-sub--item">React</li>
-                    </ul>
-                </li>
-                <li class="skills__list-main--item">WordPress
-                    <ul class="skills__list-sub">
-                        <li>Elementor</li>
-                    </ul>
-                </li>
+                <li class="skills__list--item">HTML5</li>
+                <li class="skills__list--item">CSS (SCSS, Flex-box, Grid)</li>
+                <li class="skills__list--item">JavaScript (Jquery, React)</li>
+                <li class="skills__list--item">WordPress (Elementor)</li>
             </ul>
 
-            <ul class="skills__list skills__list-main">
+            <ul class="skills__list">
                     <h3 class="skills__list--header">Server-Side</h3>
-                <li class="skills__list-main--item">Nodejs
-                <li class="skills__list-sub--item">Express</li>
-                </li>
-                <li class="skills__list-sub--item">PHP</li>
+                <li class="skills__list--item">Nodejs (Express)</li>
+                <li class="skills__list--item">PHP</li>
             </ul>
 
-            <ul class="skills__list skills__list-main">
+            <ul class="skills__list">
                     <h3 class="skills__list--header">Data-Base</h3>
-                <li class="skills__list-main--item">MySql</li>
-                <li class="skills__list-sub--item">MongoDB</li>
+                <li class="skills__list--item">MySql</li>
+                <li class="skills__list--item">MongoDB</li>
             </ul>
 
-            <ul class="skills__list skills__list-main">
+            <ul class="skills__list">
                     <h3 class="skills__list--header">Other</h3>
-                <li class="skills__list-main--item">Npm/Pm2</li>
-                <li class="skills__list-sub--item">Git</li>
+                <li class="skills__list--item">Npm (Pm2, etc)</li>
+                <li class="skills__list--item">Git</li>
             </ul>
 
         </div>
         <div class="skills__container--want-to-learn">
             <ul class="skills__list">
                     <h3 class="skills__list--header">Want to learn</h3>
-            <li>Python</li>
-            <li>Swift</li>
+            <li class="skills__list--item">Python</li>
+            <li class="skills__list--item">Swift</li>
         </ul>
         </div>
         
