finished project sec

--- a/index.html
+++ b/index.html
@@ -150,73 +150,73 @@
         <div class="projects-container">
             <div class="project project__1">
                 <div class="project__img">
-                    <img class="project__img--item" src="#" alt="#">
+                    <img class="project__img--item" src="./images/portfolio-img/wikiF.png" alt="#">
                 </div>
                 <div class="project__info">
-                    <h3 class="project__info--title">Project1</h3>
+                    <h3 class="project__info--title">Wikipedia Search</h3>
                     <p class="project__info--description">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo obcaecati amet et natus,
                         similique alias maiores laudantium nemo officia.
                     </p>
                     <div class="project__btns">
-                        <a class="btn btn__project" href="#">Demo</a>
-                        <a class="btn btn__project" href="#">View Code</a>
+                        <a target="blank" class="btn btn__project" href="http://kludger.techlaunch.online/projects/wikipedia-app">Demo</a>
+                        <a target="blank" class="btn btn__project" href="https://github.com/kludger1/wikipedia-app.git">View Code</a>
 
                     </div>
                 </div>
             </div>
             <div class="project project__2">
                 <div class="project__img">
-                    <img class="project__img--item" src="#" alt="#">
+                    <img class="project__img--item" src="./images/portfolio-img/pianoF.png" alt="#">
                 </div>
                 <div class="project__info">
-                    <h3 class="project__info--title">Project2</h3>
+                    <h3 class="project__info--title">Piano</h3>
                     <p class="project__info--description">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo obcaecati amet et natus,
                         similique alias maiores laudantium nemo officia.
                     </p>
                     <div class="project__btns">
-                        <a class="btn btn__project" href="#">Demo</a>
-                        <a class="btn btn__project" href="#">View Code</a>
+                        <a target="blank" class="btn btn__project" href="http://kludger.techlaunch.online/projects/music-boxes">Demo</a>
+                        <a target="blank" class="btn btn__project" href="https://github.com/kludger1/music-boxes.git">View Code</a>
 
                     </div>
                 </div>
             </div>
             <div class="project project__3">
                 <div class="project__img">
-                    <img class="project__img--item" src="#" alt="#">
+                    <img class="project__img--item" src="./images/portfolio-img/flappy-birdF.png" alt="#">
                 </div>
                 <div class="project__info">
-                    <h3 class="project__info--title">Project3</h3>
+                    <h3 class="project__info--title">Flappy Bird Remake</h3>
                     <p class="project__info--description">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo obcaecati amet et natus,
                         similique alias maiores laudantium nemo officia.
                     </p>
                     <div class="project__btns">
-                        <a class="btn btn__project" href="#">Demo</a>
-                        <a class="btn btn__project" href="#">View Code</a>
+                        <a target="blank" class="btn btn__project" href="http://kludger.techlaunch.online/projects/flappy-bird">Demo</a>
+                        <a target="blank" class="btn btn__project" href="https://github.com/kludger1/flappy-bird.git">View Code</a>
 
                     </div>
                 </div>
             </div>
             <div class="project project__4">
                 <div class="project__img">
-                    <img class="project__img--item" src="#" alt="#">
+                    <img class="project__img--item" src="./images/portfolio-img/spaceF.png" alt="#">
                 </div>
                 <div class="project__info">
-                    <h3 class="project__info--title">Project4</h3>
+                    <h3 class="project__info--title">Space Battle</h3>
                     <p class="project__info--description">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo obcaecati amet et natus,
                         similique alias maiores laudantium nemo officia.
                     </p>
                     <div class="project__btns">
-                        <a class="btn btn__project" href="#">Demo</a>
-                        <a class="btn btn__project" href="#">View Code</a>
+                        <a target="blank" class="btn btn__project" href="http://kludger.techlaunch.online/projects/war-game/public/">Demo</a>
+                        <a target="blank" class="btn btn__project" href="https://github.com/kludger1/war-game.git">View Code</a>
 
                     </div>
                 </div>
             </div>
-            <div class="project project__5">
+            <!-- <div class="project project__5">
                 <div class="project__img">
                     <img class="project__img--item" src="#" alt="#">
                 </div>
@@ -227,12 +227,12 @@
                         similique alias maiores laudantium nemo officia.
                     </p>
                     <div class="project__btns">
-                        <a class="btn btn__project" href="#">Demo</a>
-                        <a class="btn btn__project" href="#">View Code</a>
+                        <a target="blank" class="btn btn__project" href="#">Demo</a>
+                        <a target="blank" class="btn btn__project" href="#">View Code</a>
 
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
