--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
         <h1 class="contact-title">Contact</h1>
         <div class="contact-container">
             <div class="contact__input">
-                <input class="contact__input--name" type="text" placeholder="Name">
-                <input class="contact__input--email" type="text" placeholder="Email">
-                <input class="contact__input--subject" type="text" placeholder="Subject">
-                <input class="contact__input--message" type="text" placeholder="Message">
+                <input class="contact__input--item contact__input--name" type="text" placeholder="Name">
+                <input class="contact__input--item contact__input--email" type="text" placeholder="Email">
+                <input class="contact__input--item contact__input--subject" type="text" placeholder="Subject">
+                <input class="contact__input--item contact__input--message" type="text" placeholder="Message">
                 <a class="btn btn__contact" href="#">Send Message</a>
             </div>
             <!-- <div class="contact__info">
