fixed links with _blank

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 </div>
                 <ul class="navbar__list navbar__list--hide">
                     <li><a href="#about" class="navbar__list--item">About</a></li>
-                    <li><a href="#" class="navbar__list--item">Skills</a></li>
-                    <li><a href="#" class="navbar__list--item">Projects</a></li>
-                    <li><a href="#" class="navbar__list--item">Contact</a></li>
+                    <li><a href="#skills" class="navbar__list--item">Skills</a></li>
+                    <li><a href="#projects" class="navbar__list--item">Projects</a></li>
+                    <li><a href="#contact" class="navbar__list--item">Contact</a></li>
                 </ul>
 
             </nav>
@@ -51,9 +51,9 @@
                 <a href="#about" class="btn btn__home">More About Me <i class="fas fa-chevron-down"></i></a>
             </div>
             <ul class="home__social">
-                <li><a class="home__social--item" href="#"><i class="fab fa-linkedin"></i></a></li>
-                <li><a class="home__social--item" href="#"><i class="fab fa-github"></i></a></li>
-                <li><a class="home__social--item" href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a target="_blank" class="home__social--item" href="https://www.linkedin.com/in/katleen-ludger-9a1b79173"><i class="fab fa-linkedin"></i></a></li>
+                <li><a target="_blank" class="home__social--item" href="https://github.com/kludger1"><i class="fab fa-github"></i></a></li>
+                <li><a target="_blank" class="home__social--item" href="https://www.instagram.com/kats.space/"><i class="fab fa-instagram"></i></a></li>
             </ul>
         </div>
     </header>
@@ -68,29 +68,13 @@
             </div>
             <div class="about-content__info">
                 <p class="about-content__info--text about-content__info--text1">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis, earum
-                    numquam obcaecati itaque
-                    iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
-                    Possimus,
-                    eum.arum
-                    numquam obcaecati itaque
-                    iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
+                    I'm Kat and I am full stack developer. I am a very passionate about web development. Ive been learning code for 9 months intensely now and ive learn a great deal of knowledge during that time. 
                 </p>
                 <p class="about-content__info--text about-content__info--text2">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis, earum
-                    numquam obcaecati itaque
-                    iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
-                    Possimus,
-                    eum.arum
-                    numquam obcaecati itaque
-                    iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
+                    I am able to build a Website from the ground up from concept, navigation, layout and programming, I can write well-designed, testable and efficient code using current best practices in Web development.
                 </p>
                 <p class="about-content__info--text about-content__info--text3">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis, earum
-                    numquam obcaecati itaque
-                    iure fuga rerum tempora velit, sed labore minima aut rem repellendus. Assumenda, sed ducimus.
-                    Possimus,
-                    eum.
+                    I have excellent communication and problem-solving skills. I'm able to focus on projects, develop strategies and meet or exceed deadlines.
                 </p>
                 <div class="about-content__info--btns">
                     <a href="#" class="btn btn__about">Download Resume</a>
@@ -159,8 +143,8 @@
                         similique alias maiores laudantium nemo officia.
                     </p>
                     <div class="project__btns">
-                        <a target="blank" class="btn btn__project" href="http://kludger.techlaunch.online/projects/wikipedia-app">Demo</a>
-                        <a target="blank" class="btn btn__project" href="https://github.com/kludger1/wikipedia-app.git">View Code</a>
+                        <a target="_blank" class="btn btn__project" href="http://kludger.techlaunch.online/projects/wikipedia-app">Demo</a>
+                        <a target="_blank" class="btn btn__project" href="https://github.com/kludger1/wikipedia-app.git">View Code</a>
 
                     </div>
                 </div>
@@ -176,8 +160,8 @@
                         similique alias maiores laudantium nemo officia.
                     </p>
                     <div class="project__btns">
-                        <a target="blank" class="btn btn__project" href="http://kludger.techlaunch.online/projects/music-boxes">Demo</a>
-                        <a target="blank" class="btn btn__project" href="https://github.com/kludger1/music-boxes.git">View Code</a>
+                        <a target="_blank" class="btn btn__project" href="http://kludger.techlaunch.online/projects/music-boxes">Demo</a>
+                        <a target="_blank" class="btn btn__project" href="https://github.com/kludger1/music-boxes.git">View Code</a>
 
                     </div>
                 </div>
@@ -193,8 +177,8 @@
                         similique alias maiores laudantium nemo officia.
                     </p>
                     <div class="project__btns">
-                        <a target="blank" class="btn btn__project" href="http://kludger.techlaunch.online/projects/flappy-bird">Demo</a>
-                        <a target="blank" class="btn btn__project" href="https://github.com/kludger1/flappy-bird.git">View Code</a>
+                        <a target="_blank" class="btn btn__project" href="http://kludger.techlaunch.online/projects/flappy-bird">Demo</a>
+                        <a target="_blank" class="btn btn__project" href="https://github.com/kludger1/flappy-bird.git">View Code</a>
 
                     </div>
                 </div>
@@ -210,8 +194,8 @@
                         similique alias maiores laudantium nemo officia.
                     </p>
                     <div class="project__btns">
-                        <a target="blank" class="btn btn__project" href="http://kludger.techlaunch.online/projects/war-game/public/">Demo</a>
-                        <a target="blank" class="btn btn__project" href="https://github.com/kludger1/war-game.git">View Code</a>
+                        <a target="_blank" class="btn btn__project" href="http://kludger.techlaunch.online/projects/war-game/public/">Demo</a>
+                        <a target="_blank" class="btn btn__project" href="https://github.com/kludger1/war-game.git">View Code</a>
 
                     </div>
                 </div>
@@ -227,8 +211,8 @@
                         similique alias maiores laudantium nemo officia.
                     </p>
                     <div class="project__btns">
-                        <a target="blank" class="btn btn__project" href="#">Demo</a>
-                        <a target="blank" class="btn btn__project" href="#">View Code</a>
+                        <a target="_blank" class="btn btn__project" href="#">Demo</a>
+                        <a target="_blank" class="btn btn__project" href="#">View Code</a>
 
                     </div>
                 </div>
