changed images link to new route

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="navbar-container">
             <nav class="navbar">
                 <div class="navbar__logo">
-                    <a href="#"><img class="navbar__logo--img" src="./images/katsspace-logo-white.png"
+                    <a href="#"><img class="navbar__logo--img" src="./images/portfolio/katsspace-logo-white.png"
                             alt="katsspace"></a>
                 </div>
                 <div class="navbar__toggle">
@@ -64,7 +64,7 @@
         <h1 class="about-title">About</h1>
         <div class="about-content">
             <div class="about-content__div">
-                <img class="about-content__div--img" src="./images/IMG_4047.jpg" alt="Picture of Katleen">
+                <img class="about-content__div--img" src="./images/portfolio/IMG_4047.jpg" alt="Picture of Katleen">
             </div>
             <div class="about-content__info">
                 <p class="about-content__info--text about-content__info--text1">
@@ -134,7 +134,7 @@
         <div class="projects-container">
             <div class="project project__1">
                 <div class="project__img">
-                    <img class="project__img--item" src="./images/portfolio-img/wikiF.png" alt="#">
+                    <img class="project__img--item" src="./images/portfolio/portfolio-img/wikiF.png" alt="#">
                 </div>
                 <div class="project__info">
                     <h3 class="project__info--title">Wikipedia Search</h3>
@@ -151,7 +151,7 @@
             </div>
             <div class="project project__2">
                 <div class="project__img">
-                    <img class="project__img--item" src="./images/portfolio-img/pianoF.png" alt="#">
+                    <img class="project__img--item" src="./images/portfolio/portfolio-img/pianoF.png" alt="#">
                 </div>
                 <div class="project__info">
                     <h3 class="project__info--title">Piano</h3>
@@ -168,7 +168,7 @@
             </div>
             <div class="project project__3">
                 <div class="project__img">
-                    <img class="project__img--item" src="./images/portfolio-img/flappy-birdF.png" alt="#">
+                    <img class="project__img--item" src="./images/portfolio/portfolio-img/flappy-birdF.png" alt="#">
                 </div>
                 <div class="project__info">
                     <h3 class="project__info--title">Flappy Bird Remake</h3>
@@ -185,7 +185,7 @@
             </div>
             <div class="project project__4">
                 <div class="project__img">
-                    <img class="project__img--item" src="./images/portfolio-img/spaceF.png" alt="#">
+                    <img class="project__img--item" src="./images/portfolio/portfolio-img/spaceF.png" alt="#">
                 </div>
                 <div class="project__info">
                     <h3 class="project__info--title">Space Battle</h3>
